# swagger.yaml
@@ -42,13 +42,11 @@ paths:
           description: Not found
         '405':
           description: Validation exception
-  '/certificate/{certId}{exportId}':
+  '/certificate/{certId}':
     get:
       tags:
         - certificate
       summary: Finds Certificates by CertId
-      description: Multiple status values can be provided with comma separated strings
-      operationId: getCertificate
       produces:
         - application/xml
         - application/json
@@ -57,10 +55,6 @@ paths:
           in: path
           type: string
           required: true
-        - name: exportId
-          in: path
-          required: true
-          type: string
       responses:
         '200':
           description: successful operation
